Fix color contrast

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ ul {
   top: 70px;
   left: 220px;
   font-size: 20px;
-  color: #fff;
+  color: #bf8bda;
 }
 
 .header-right h1 {
@@ -120,7 +120,7 @@ ul {
 .header-right h3 {
   font-weight: 500;
   font-size: 35px;
-  color: #a257c7;
+  color: #bf8bda;
 }
 
 .header-paragraph {
@@ -512,7 +512,7 @@ main {
   .navbar-ul a {
     margin-bottom: 0;
     margin-top: 5px;
-    color: #fff;
+    color: #bf8bda;
   }
 
   .header-back-gradient,
